fixed IllegalArgumentException in service (finally)